--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <h1 class="primaryTitle titleMD">MUSICIAN? DJ? VENUE MANAGER / OWNER? <br> FESTIVAL
                         ORGANIZER?</h1>
                     <p class="bannerDes">Add events for free and unlimited on</p>
-                    <a class="linkBtn" href="#">www.BUUZEVENTS.com</a>
+                    <a href="https://www.buuzevents.com/" target="_blank" class="linkBtn" href="#">www.BUUZEVENTS.com</a>
                 </div>
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="position-relative">
@@ -198,7 +198,7 @@
                 <div class="icon02">
                     <img src="assets/image/icon02.svg" alt="icon02">
                 </div>
-                <a href="#"><img src="assets/image/appleLink.svg" alt="app-store" width="340"></a>
+                <a href="https://apps.apple.com/in/app/buuz-find-events-fast-easy/id6478113215" target="_blank"><img src="assets/image/appleLink.svg" alt="app-store" width="340"></a>
                 <a href="#" class="comingSoon" title="Coming Soon"><img src="assets/image/playLink.svg" alt="app-store" width="340"></a>
             </div>
         </div>
@@ -234,14 +234,15 @@
                 </div>
                 <div class="col-md-6 col-lg-2 text-right" data-aos="fade-down">
                     <div class="footerSocial">
-                        <a href="#"><img src="assets/image/Facebook.svg" alt="YouTube"></a>
-                        <a href="#"><img src="assets/image/YouTube.svg" alt="YouTube"></a>
-                        <a href="#"><img src="assets/image/Twitter.svg" alt="YouTube"></a>
-                        <a href="#"><img src="assets/image/Instagram.svg" alt="YouTube"></a>
+                        <a target="_blank" href="https://www.linkedin.com/company/buuz/"><img src="assets/image/linkdin.svg" alt="linkdin" width="26"></a>
+                        <a target="_blank" href="https://m.facebook.com/buuzsoftware/"><img src="assets/image/Facebook.svg" alt="facebook"></a>
+                        <a target="_blank" href="https://m.youtube.com/@BUUZ_App"><img src="assets/image/YouTube.svg" alt="YouTube"></a>
+                        <a target="_blank" href="https://www.tiktok.com/@buuz_app?_t=ZT-8tR5wqqKORW&_r=1"><img src="assets/image/tiktok.svg" alt="tiktok" width="22"></a>
+                        <a target="_blank" href="https://www.instagram.com/buuz_app?igsh=NTc4MTIwNjQ2YQ=="><img src="assets/image/Instagram.svg" alt="instagram"></a>
                     </div>
                 </div>
             </div>
-            <div class="copyRight">© 2023 Copyright BUUZ Software Inc. & BUUZ App</div>
+            <div class="copyRight">© 2025 Copyright BUUZ Software Inc. & BUUZ App</div>
         </div>
     </section>
 
