--- a/index.html
+++ b/index.html
@@ -16,17 +16,37 @@
 
 <body>
 
-    <section class="buzzBanner pb-5 position-relative">
+    <section class="buzzBanner position-relative">
         <div class="container">
-            <div class="logoBar">
-                <a href="navLogo">
+            <div class="MenuBar">
+                <a target="_blank" href="http://www.buuzapp.com">
                     <img src="assets/image/logo.svg" alt="logo">
                 </a>
-                <div class="rightMenu">
-                    <span><img src="assets/image/menu.svg" alt="menu-icon"></span>
+
+                <span class="btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="assets/image/menu.svg" alt="menu-icon"></span>
+
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                <div class="offcanvas-header">
+                    <h5 id="offcanvasRightLabel"></h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body p-0">
+                    <ul class="menuLink">
+                        <li><a href="#">How It Works</a></li>
+                        <li><a href="#">BUUZ In The Press</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+                        <li><a href="#">Musicians, DJs and Artists</a></li>
+                        <li><a href="#">Venues, Arenas, Stadiums</a></li>
+                        <li><a href="#">Comedy Clubs</a></li>
+                        <li><a href="#">Theaters & Performing Art Centers</a></li>
+                        <li><a href="#">Festivals and Beach Events</a></li>
+                        <li><a href="#">Cities, Municipalities, Parks</a></li>
+                    </ul>
+                </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row pb-5 pt-3">
                 <div class="col-md-6 position-relative text-center text-md-start" data-aos="fade-up">
                     <h1 class="primaryTitle mt-0 mt-md-5 pt-md-5 pt-0">Find Events Fast & Easy</h1>
                     <p class="bannerDes">Discover the endless variety of events on our app</p>
@@ -138,12 +158,13 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-7" data-aos="fade-up" data-aos-delay="1000">
-                    <h1 class="primaryTitle titleMD text-center text-md-start mt-5 mt-md-0 mb-4 mb-md-0">MANY WAYS TO EARN <br> COINS & RECEIVE PERSONALIZED <br>
+                    <h1 class="primaryTitle titleMD text-center text-md-start mt-5 mt-md-0">MANY WAYS TO EARN <br> COINS & RECEIVE PERSONALIZED <br>
                         EVENT SUGGESTIONS</h1>
                 </div>
                 <div class="col-md-5" data-aos="fade-up">
-                    <div class="referImg position-relative">
-                        <p data-aos="zoom-in" data-aos-delay="800"><span class="d-block">Invite Friends</span> (You and your Friends will receive coins)</p>
+                    <div class="referImg position-relative text-center">
+                        <span class="imgLabel imgLabel04" data-aos="zoom-in" data-aos-delay="800">Invite Friends Through the App</span>
+                        <!-- <p data-aos="zoom-in" data-aos-delay="800"><span class="d-block">Invite Friends</span> (You and your Friends will receive coins)</p> -->
                         <span class="imgLabel imgLabel01" data-aos="zoom-in" data-aos-delay="1000">Swipe Question</span>
                         <span class="imgLabel imgLabel02" data-aos="zoom-in" data-aos-delay="1200">Suggest or Report Venues</span>
                         <span class="imgLabel imgLabel03" data-aos="zoom-in" data-aos-delay="1000">Play Trivia Etc.</span>
@@ -208,14 +229,14 @@
         <div class="container">
             <div class="row g-3">
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
-                    <img src="assets/image/logo.svg" alt="logo">
+                    <a target="_blank" href="http://www.buuzapp.com"><img src="assets/image/logo.svg" alt="logo"></a>
                 </div>
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
                     <div class="footerLink">
                         <a href="#">How It Works</a>
                         <a href="#">BUUZ In The Press</a>
                         <a href="#">Terms & Conditions</a>
-                        <a href="#">Privacy Policy</a>
+                        <a href="privacyPolicy.html">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3" data-aos="fade-down">
