--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -19,23 +19,31 @@
     <section class="buzzBanner position-relative">
         <div class="container">
             <div class="MenuBar">
-                <a href="navLogo">
+                <a target="_blank" href="http://www.buuzapp.com">
                     <img src="assets/image/logo.svg" alt="logo">
                 </a>
 
-                <span class="btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                    aria-controls="offcanvasRight"><img src="assets/image/menu.svg" alt="menu-icon"></span>
+                <span class="btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="assets/image/menu.svg" alt="menu-icon"></span>
 
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
-                    aria-labelledby="offcanvasRightLabel">
-                    <div class="offcanvas-header">
-                        <h5 id="offcanvasRightLabel"></h5>
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        Coming Soon
-                    </div>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                <div class="offcanvas-header">
+                    <h5 id="offcanvasRightLabel"></h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body p-0">
+                    <ul class="menuLink">
+                        <li><a href="#">How It Works</a></li>
+                        <li><a href="#">BUUZ In The Press</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+                        <li><a href="#">Musicians, DJs and Artists</a></li>
+                        <li><a href="#">Venues, Arenas, Stadiums</a></li>
+                        <li><a href="#">Comedy Clubs</a></li>
+                        <li><a href="#">Theaters & Performing Art Centers</a></li>
+                        <li><a href="#">Festivals and Beach Events</a></li>
+                        <li><a href="#">Cities, Municipalities, Parks</a></li>
+                    </ul>
+                </div>
                 </div>
             </div>
         </div>
