--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -273,14 +273,14 @@
         <div class="container">
             <div class="row g-3">
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
-                    <img src="assets/image/logo.svg" alt="logo">
+                    <a target="_blank" href="http://www.buuzapp.com"><img src="assets/image/logo.svg" alt="logo"></a>
                 </div>
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
                     <div class="footerLink">
                         <a href="#">How It Works</a>
                         <a href="#">BUUZ In The Press</a>
                         <a href="#">Terms & Conditions</a>
-                        <a href="#">Privacy Policy</a>
+                        <a href="privacyPolicy.html">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3" data-aos="fade-down">
@@ -299,16 +299,11 @@
                 </div>
                 <div class="col-md-6 col-lg-2 text-right" data-aos="fade-down">
                     <div class="footerSocial">
-                        <a target="_blank" href="https://www.linkedin.com/company/buuz/"><img
-                                src="assets/image/linkdin.svg" alt="linkdin" width="26"></a>
-                        <a target="_blank" href="https://m.facebook.com/buuzsoftware/"><img
-                                src="assets/image/Facebook.svg" alt="facebook"></a>
-                        <a target="_blank" href="https://m.youtube.com/@BUUZ_App"><img src="assets/image/YouTube.svg"
-                                alt="YouTube"></a>
-                        <a target="_blank" href="https://www.tiktok.com/@buuz_app?_t=ZT-8tR5wqqKORW&_r=1"><img
-                                src="assets/image/tiktok.svg" alt="tiktok" width="22"></a>
-                        <a target="_blank" href="https://www.instagram.com/buuz_app?igsh=NTc4MTIwNjQ2YQ=="><img
-                                src="assets/image/Instagram.svg" alt="instagram"></a>
+                        <a target="_blank" href="https://www.linkedin.com/company/buuz/"><img src="assets/image/linkdin.svg" alt="linkdin" width="26"></a>
+                        <a target="_blank" href="https://m.facebook.com/buuzsoftware/"><img src="assets/image/Facebook.svg" alt="facebook"></a>
+                        <a target="_blank" href="https://m.youtube.com/@BUUZ_App"><img src="assets/image/YouTube.svg" alt="YouTube"></a>
+                        <a target="_blank" href="https://www.tiktok.com/@buuz_app?_t=ZT-8tR5wqqKORW&_r=1"><img src="assets/image/tiktok.svg" alt="tiktok" width="22"></a>
+                        <a target="_blank" href="https://www.instagram.com/buuz_app?igsh=NTc4MTIwNjQ2YQ=="><img src="assets/image/Instagram.svg" alt="instagram"></a>
                     </div>
                 </div>
             </div>
