--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -32,16 +32,16 @@
                 </div>
                 <div class="offcanvas-body p-0">
                     <ul class="menuLink">
-                        <li><a href="#">How It Works</a></li>
-                        <li><a href="#">BUUZ In The Press</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="privacyPolicy.html">Privacy Policy</a></li>
-                        <li><a href="#">Musicians, DJs and Artists</a></li>
-                        <li><a href="#">Venues, Arenas, Stadiums</a></li>
-                        <li><a href="#">Comedy Clubs</a></li>
-                        <li><a href="#">Theaters & Performing Art Centers</a></li>
-                        <li><a href="#">Festivals and Beach Events</a></li>
-                        <li><a href="#">Cities, Municipalities, Parks</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">How It Works</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">BUUZ In The Press</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Terms & Conditions</a></li>
+                        <li><a target="_blank" href="privacyPolicy.html">Privacy Policy</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Musicians, DJs and Artists</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Venues, Arenas, Stadiums</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Comedy Clubs</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Theaters & Performing Art Centers</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Festivals and Beach Events</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Cities, Municipalities, Parks</a></li>
                     </ul>
                 </div>
                 </div>
