--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                 </div>
                 <div class="offcanvas-body p-0">
                     <ul class="menuLink">
-                        <li><a href="#">How It Works</a></li>
-                        <li><a href="#">BUUZ In The Press</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="privacyPolicy.html">Privacy Policy</a></li>
-                        <li><a href="#">Musicians, DJs and Artists</a></li>
-                        <li><a href="#">Venues, Arenas, Stadiums</a></li>
-                        <li><a href="#">Comedy Clubs</a></li>
-                        <li><a href="#">Theaters & Performing Art Centers</a></li>
-                        <li><a href="#">Festivals and Beach Events</a></li>
-                        <li><a href="#">Cities, Municipalities, Parks</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">How It Works</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">BUUZ In The Press</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Terms & Conditions</a></li>
+                        <li><a target="_blank" href="privacyPolicy.html">Privacy Policy</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Musicians, DJs and Artists</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Venues, Arenas, Stadiums</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Comedy Clubs</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Theaters & Performing Art Centers</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Festivals and Beach Events</a></li>
+                        <li><a target="_blank" href="http://www.buuzapp.com">Cities, Municipalities, Parks</a></li>
                     </ul>
                 </div>
                 </div>
@@ -233,24 +233,24 @@
                 </div>
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
                     <div class="footerLink">
-                        <a href="#">How It Works</a>
-                        <a href="#">BUUZ In The Press</a>
-                        <a href="#">Terms & Conditions</a>
-                        <a href="privacyPolicy.html">Privacy Policy</a>
+                        <a target="_blank" href="http://www.buuzapp.com">How It Works</a>
+                        <a target="_blank" href="http://www.buuzapp.com">BUUZ In The Press</a>
+                        <a target="_blank" href="http://www.buuzapp.com">Terms & Conditions</a>
+                        <a target="_blank" href="privacyPolicy.html">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3" data-aos="fade-down">
                     <div class="footerLink">
-                        <a href="#">Musicians, DJs and Artists</a>
-                        <a href="#">Venues, Arenas, Stadiums</a>
-                        <a href="#">Comedy Clubs</a>
+                        <a target="_blank" href="http://www.buuzapp.com">Musicians, DJs and Artists</a>
+                        <a target="_blank" href="http://www.buuzapp.com">Venues, Arenas, Stadiums</a>
+                        <a target="_blank" href="http://www.buuzapp.com">Comedy Clubs</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3" data-aos="fade-down">
                     <div class="footerLink">
-                        <a href="#">Theaters & Performing Art Centers</a>
-                        <a href="#">Festivals and Beach Events</a>
-                        <a href="#">Cities, Municipalities, Parks</a>
+                        <a target="_blank" href="http://www.buuzapp.com">Theaters & Performing Art Centers</a>
+                        <a target="_blank" href="http://www.buuzapp.com">Festivals and Beach Events</a>
+                        <a target="_blank" href="http://www.buuzapp.com">Cities, Municipalities, Parks</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-2 text-right" data-aos="fade-down">
