--- a/textSlider.html
+++ b/textSlider.html
@@ -11,23 +11,43 @@
     <link href="assets/css/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/textSlider.css" rel="stylesheet">
     <link href="assets/point-fonts/stylesheet.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <section class="buzzBanner pb-5 position-relative">
+    <section class="buzzBanner position-relative">
         <div class="container">
-            <div class="logoBar">
-                <a href="navLogo">
+            <div class="MenuBar">
+                <a target="_blank" href="http://www.buuzapp.com">
                     <img src="assets/image/logo.svg" alt="logo">
                 </a>
-                <div class="rightMenu">
-                    <span><img src="assets/image/menu.svg" alt="menu-icon"></span>
+
+                <span class="btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="assets/image/menu.svg" alt="menu-icon"></span>
+
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                <div class="offcanvas-header">
+                    <h5 id="offcanvasRightLabel"></h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body p-0">
+                    <ul class="menuLink">
+                        <li><a href="#">How It Works</a></li>
+                        <li><a href="#">BUUZ In The Press</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+                        <li><a href="#">Musicians, DJs and Artists</a></li>
+                        <li><a href="#">Venues, Arenas, Stadiums</a></li>
+                        <li><a href="#">Comedy Clubs</a></li>
+                        <li><a href="#">Theaters & Performing Art Centers</a></li>
+                        <li><a href="#">Festivals and Beach Events</a></li>
+                        <li><a href="#">Cities, Municipalities, Parks</a></li>
+                    </ul>
+                </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row pb-5 pt-3">
                 <div class="col-md-6 position-relative text-center text-md-start" data-aos="fade-up">
                     <h1 class="primaryTitle mt-0 mt-md-5 pt-md-5 pt-0">Find Events Fast & Easy</h1>
                     <p class="bannerDes">Discover the endless variety of events on our app</p>
@@ -58,14 +78,14 @@
                 </div>
                 <div class="col-md-7 smallSlider position-relative" data-aos="fade-up">
                     <div class="sliderOuter">
-                        <div class="textSlider">
-                            <div class="swiper-slide">Food & Beverage Events</div>
-                            <div class="swiper-slide">Health & Wellness</div>
-                            <div class="swiper-slide">Holiday Events</div>
-                            <div class="swiper-slide">Live Music Events</div>
-                            <div class="swiper-slide">Performing Arts</div>
-                            <div class="swiper-slide">Special Events</div>
-                            <div class="swiper-slide">Sport Events</div>
+                        <div class="textSlider1">
+                            <h4>Food & Beverage Events</h4>
+                            <h4>Health & Wellness</h4>
+                            <h4>Holiday Events</h4>
+                            <h4>Live Music Events</h4>
+                            <h4>Performing Arts</h4>
+                            <h4>Special Events</h4>
+                            <h4>Sport Events</h4>
                         </div>
                     </div>
                 </div>
@@ -81,7 +101,7 @@
                         <img src="assets/image/eventImg.png" alt="event-img">
                     </div>
                 </div>
-                <div class="col-lg-6 position-relative">
+                <div class="col-lg-6 position-relative eventText">
                     <div class="musicIcon">
                         <img src="assets/image/musicIcon.svg" alt="music-icon" width="100%" data-aos="zoom-in" data-aos-delay="800">
                     </div>
@@ -146,13 +166,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-7" data-aos="fade-up" data-aos-delay="1000">
-                    <h1 class="primaryTitle titleMD text-center text-md-start mt-5 mt-md-0 mb-5 mb-md-0">MANY WAYS TO EARN <br> COINS & RECEIVE PERSONALIZED <br>
+                    <h1 class="primaryTitle titleMD text-center text-md-start mt-5 mt-md-0">MANY WAYS TO EARN <br> COINS & RECEIVE PERSONALIZED <br>
                         EVENT SUGGESTIONS</h1>
                 </div>
                 <div class="col-md-5" data-aos="fade-up">
-                    <div class="referImg position-relative">
-                        <p data-aos="zoom-in" data-aos-delay="800"><span class="d-block">Invite Friends</span> (You and your Friends will receive coins)</p>
-                        <span class="imgLabel" data-aos="zoom-in" data-aos-delay="1000">Swipe Question</span>
+                    <div class="referImg position-relative text-center">
+                        <span class="imgLabel imgLabel04" data-aos="zoom-in" data-aos-delay="800">Invite Friends Through the App</span>
+                        <!-- <p data-aos="zoom-in" data-aos-delay="800"><span class="d-block">Invite Friends</span> (You and your Friends will receive coins)</p> -->
+                        <span class="imgLabel imgLabel01" data-aos="zoom-in" data-aos-delay="1000">Swipe Question</span>
                         <span class="imgLabel imgLabel02" data-aos="zoom-in" data-aos-delay="1200">Suggest or Report Venues</span>
                         <span class="imgLabel imgLabel03" data-aos="zoom-in" data-aos-delay="1000">Play Trivia Etc.</span>
                         <img src="assets/image/referImg.png" alt="refer-img" width="100%">
@@ -168,11 +189,11 @@
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="privacyImg text-end position-relative">
                         <img class="startImg" src="assets/image/start.png" alt="start-img">
-                        <img class="lockMainImg" src="assets/image/lock01.png" alt="lock-img">
+                        <img class="lockMainImg" src="assets/image/lock01.png" alt="lock-img" width="100%">
                     </div>
                 </div>
                 <div class="col-md-6" data-aos="fade-up">
-                    <h1 class="primaryTitle text-center mt-5 mt-md-0 text-md-end titleMD">PROTECTING <br> YOUR PRIVACY - WE NEVER
+                    <h1 class="primaryTitle text-center mt-5 mt-md-0 text-md-end titleMD">PROTECTING <br> YOUR PRIVACY - <br> WE NEVER
                         SHARE YOUR DATA</h1>
                 </div>
             </div>
@@ -186,7 +207,7 @@
                     <h1 class="primaryTitle titleMD">MUSICIAN? DJ? VENUE MANAGER / OWNER? <br> FESTIVAL
                         ORGANIZER?</h1>
                     <p class="bannerDes">Add events for free and unlimited on</p>
-                    <a class="linkBtn" href="#">www.BUUZEVENTS.com</a>
+                    <a href="https://www.buuzevents.com/" target="_blank" class="linkBtn" href="#">www.BUUZEVENTS.com</a>
                 </div>
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="position-relative">
@@ -202,12 +223,12 @@
     <section class="sectionPadding downloadSection">
         <div class="container" data-aos="fade-up">
             <h2>DOWNLOAD The BUUZ app to explore events near you</h2>
-            <div class="downloadIcon d-flex justify-content-center gap-3 mt-3 position-relative flex-wrap">
+            <div class="downloadIcon d-flex justify-content-center gap-3 mt-3 position-relative flex-wrap" data-aos="zoom-in" data-aos-delay="800">
                 <div class="icon02">
                     <img src="assets/image/icon02.svg" alt="icon02">
                 </div>
-                <a href="#"><img src="assets/image/appleLink.svg" alt="app-store" width="340"></a>
-                <a href="#"><img src="assets/image/playLink.svg" alt="app-store" width="340"></a>
+                <a href="https://apps.apple.com/in/app/buuz-find-events-fast-easy/id6478113215" target="_blank"><img src="assets/image/appleLink.svg" alt="app-store" width="340"></a>
+                <a href="#" class="comingSoon" title="Coming Soon"><img src="assets/image/playLink.svg" alt="app-store" width="340"></a>
             </div>
         </div>
     </section>
@@ -216,14 +237,14 @@
         <div class="container">
             <div class="row g-3">
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
-                    <img src="assets/image/logo.svg" alt="logo">
+                    <a target="_blank" href="http://www.buuzapp.com"><img src="assets/image/logo.svg" alt="logo"></a>
                 </div>
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
                     <div class="footerLink">
                         <a href="#">How It Works</a>
                         <a href="#">BUUZ In The Press</a>
                         <a href="#">Terms & Conditions</a>
-                        <a href="#">Privacy Policy</a>
+                        <a href="privacyPolicy.html">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3" data-aos="fade-down">
@@ -242,14 +263,15 @@
                 </div>
                 <div class="col-md-6 col-lg-2 text-right" data-aos="fade-down">
                     <div class="footerSocial">
-                        <a href="#"><img src="assets/image/Facebook.svg" alt="YouTube"></a>
-                        <a href="#"><img src="assets/image/YouTube.svg" alt="YouTube"></a>
-                        <a href="#"><img src="assets/image/Twitter.svg" alt="YouTube"></a>
-                        <a href="#"><img src="assets/image/Instagram.svg" alt="YouTube"></a>
+                        <a target="_blank" href="https://www.linkedin.com/company/buuz/"><img src="assets/image/linkdin.svg" alt="linkdin" width="26"></a>
+                        <a target="_blank" href="https://m.facebook.com/buuzsoftware/"><img src="assets/image/Facebook.svg" alt="facebook"></a>
+                        <a target="_blank" href="https://m.youtube.com/@BUUZ_App"><img src="assets/image/YouTube.svg" alt="YouTube"></a>
+                        <a target="_blank" href="https://www.tiktok.com/@buuz_app?_t=ZT-8tR5wqqKORW&_r=1"><img src="assets/image/tiktok.svg" alt="tiktok" width="22"></a>
+                        <a target="_blank" href="https://www.instagram.com/buuz_app?igsh=NTc4MTIwNjQ2YQ=="><img src="assets/image/Instagram.svg" alt="instagram"></a>
                     </div>
                 </div>
             </div>
-            <div class="copyRight">© 2023 Copyright BUUZ Software Inc. & BUUZ App</div>
+            <div class="copyRight">© 2025 Copyright BUUZ Software Inc. & BUUZ App</div>
         </div>
     </section>
 
